--- a/ClippyVSPackage/ClippyVSPackage.csproj
+++ b/ClippyVSPackage/ClippyVSPackage.csproj
@@ -115,7 +115,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.32">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.4.2119">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
