--- a/SharedProjectTests2/SharedProjectTests2.csproj
+++ b/SharedProjectTests2/SharedProjectTests2.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MerlinTests.cs" />
     <Compile Include="GeniusTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RockyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
