--- a/ClippyVSPackage/ClippyVSPackage.csproj
+++ b/ClippyVSPackage/ClippyVSPackage.csproj
@@ -86,6 +86,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Rocky.json" />
     <Resource Include="..\SharedFiles\Resources\clippy.png">
       <Link>clippy.png</Link>
     </Resource>
@@ -115,7 +116,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.32">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.4.2119">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
