--- a/SharedProjectTests2/SharedProjectTests2.csproj
+++ b/SharedProjectTests2/SharedProjectTests2.csproj
@@ -59,10 +59,14 @@
     <Compile Include="MerlinTests.cs" />
     <Compile Include="GeniusTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RockyTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MessagePack">
+      <Version>2.5.187</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
-      <Version>17.0.31902.203</Version>
+      <Version>17.4.33103.184</Version>
     </PackageReference>
     <PackageReference Include="Moq">
       <Version>4.17.2</Version>
